--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://JsonData/Plants.json", "res://Scripts/Player/PlayerInventory.cs", "res://Scripts/Player/PlayerMovement.cs", "res://Scripts/Editor/SheetToAtlas.cs"]
-selected_script="res://Scripts/Editor/SheetToAtlas.cs"
+selected_script="res://Scripts/Player/PlayerInventory.cs"
 open_help=["CollisionObject3D", "CompressedTexture2D", "Node"]
 script_split_offset=70
 list_split_offset=0
@@ -54,6 +54,6 @@ log_filter_0=true
 log_filter_2=true
 log_filter_1=true
 log_filter_3=false
-log_filter_4=false
+log_filter_4=true
 collapse=false
 show_search=true
