--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=14
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Farm/Bed.cs", "res://Resources/BuildingData.cs", "res://Scripts/Camera/CameraMovement.cs", "res://Scripts/Data/DataManager.cs", "res://Scripts/Farm/FarmPlot.cs", "res://Scripts/Game/GameManager.cs", "res://Scripts/Game/InventoryManager.cs", "res://Scripts/Player/InventorySlot.cs", "res://Scripts/UI/InvTest.cs", "res://Resources/ItemData.cs", "res://Scripts/Game/ItemDatabase.cs", "res://LitJson/JsonData.cs", "res://JsonData/JsonHandler.cs", "res://Scripts/Data/PlantData.cs", "res://JsonData/Plants.json", "res://Scripts/Player/PlayerHotbar.cs", "res://Scripts/Player/PlayerInventory.cs", "res://Scripts/Player/PlayerMovement.cs", "res://Resources/ResourceFileLoader.cs", "res://Scripts/Editor/SheetToAtlas.cs", "res://Scripts/SpriteLibrary/SpriteLibrary.cs"]
-selected_script="res://Scripts/Data/PlantData.cs"
+selected_script="res://Scripts/Farm/FarmPlot.cs"
 open_help=["CollisionObject3D", "CompressedTexture2D", "Node"]
 script_split_offset=70
 list_split_offset=0
