--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Resources/ItemDatas/testItem.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/UI/", "res://Scripts/Game/", "res://Resources/", "res://Resources/ItemDatas/", "res://Resources/BuildingDatas/", "res://Nodes/UI/", "res://Nodes/Farm/", "res://JsonData/", "res://Art/", "res://Art/UI/", "res://Art/Sprites/", "res://Art/Sprites/AtlasSprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://Art/Bought Assets/AtlasSprites/hotbarSelect.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/UI/", "res://Scripts/Game/", "res://Resources/", "res://Resources/ItemDatas/", "res://Resources/BuildingDatas/", "res://Nodes/UI/", "res://Nodes/Farm/", "res://JsonData/", "res://Art/", "res://Art/UI/", "res://Art/Sprites/", "res://Art/Sprites/AtlasSprites/", "res://Art/Bought Assets/", "res://Art/Bought Assets/AtlasSprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Nodes/Player/player.tscn", "res://Nodes/Player/camera.tscn", "res://Nodes/Farm/building_plot.tscn", "res://Nodes/Farm/Buildings/test_building.tscn", "res://Nodes/Farm/Buildings/farmPlot.tscn", "res://Nodes/UI/player_inventory.tscn", "res://Scenes/node_3d.tscn")
 center_split_offset=-410
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-current_scene="res://Nodes/Farm/Buildings/farmPlot.tscn"
-selected_bottom_panel_item=14
+selected_main_editor_idx=0
+current_scene="res://Nodes/UI/player_inventory.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Farm/Bed.cs", "res://Resources/BuildingData.cs", "res://Scripts/Camera/CameraMovement.cs", "res://Scripts/Data/DataManager.cs", "res://Scripts/Farm/FarmPlot.cs", "res://Scripts/Game/GameManager.cs", "res://Scripts/Game/InventoryManager.cs", "res://Scripts/Player/InventorySlot.cs", "res://Scripts/UI/InvTest.cs", "res://Resources/ItemData.cs", "res://Scripts/Game/ItemDatabase.cs", "res://LitJson/JsonData.cs", "res://JsonData/JsonHandler.cs", "res://Scripts/Data/PlantData.cs", "res://JsonData/Plants.json", "res://Scripts/Player/PlayerHotbar.cs", "res://Scripts/Player/PlayerInventory.cs", "res://Scripts/Player/PlayerMovement.cs", "res://Resources/ResourceFileLoader.cs", "res://Scripts/Editor/SheetToAtlas.cs", "res://Scripts/SpriteLibrary/SpriteLibrary.cs"]
-selected_script="res://Scripts/Farm/FarmPlot.cs"
+open_scripts=["res://Scripts/Farm/Bed.cs", "res://Resources/BuildingData.cs", "res://Scripts/Camera/CameraMovement.cs", "res://Scripts/Data/DataManager.cs", "res://Scripts/Farm/FarmPlot.cs", "res://Scripts/Game/GameManager.cs", "res://Scripts/Game/InventoryManager.cs", "res://Scripts/Player/InventorySlot.cs", "res://Scripts/UI/InvTest.cs", "res://Resources/ItemData.cs", "res://Scripts/Game/ItemDatabase.cs", "res://LitJson/JsonData.cs", "res://JsonData/JsonHandler.cs", "res://JsonData/Plants.json", "res://Scripts/Player/PlayerHotbar.cs", "res://Scripts/Player/PlayerInventory.cs", "res://Scripts/Player/PlayerMovement.cs", "res://Resources/ResourceFileLoader.cs", "res://Scripts/Editor/SheetToAtlas.cs", "res://Scripts/SpriteLibrary/SpriteLibrary.cs"]
+selected_script="res://Scripts/Player/PlayerInventory.cs"
 open_help=["CollisionObject3D", "CompressedTexture2D", "Node"]
 script_split_offset=70
 list_split_offset=0
